added petition signatures, petitions shares, petition deliveries, petition premium pages

--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -43,8 +43,7 @@
         margin-bottom: 36px;
         font-weight: normal;
     }
-    p 
-    {
+    p {
         font-family: 'Lato-Light', sans-serif;
         font-size: 22px;
     }
@@ -350,6 +349,6 @@
     }
     #powered-by-wrapper {
         max-width: 950px;
-        margin: 0px auto 20px auto;
+        margin: 50px auto 20px auto;
     }
 }
