--- a/app/assets/stylesheets/themes/layout1/theme-a/style.css.scss
+++ b/app/assets/stylesheets/themes/layout1/theme-a/style.css.scss
@@ -1,4 +1,8 @@
+.circularG {
+	background-color: #f35b00;
+}
 #action-container {
+	background: url("/assets/layout1/theme-a/background_pattern.png") repeat;
 	h2 {
 		color: #f35b00
 	}
