--- a/app/assets/stylesheets/themes/layout2/theme-b/style.css.scss
+++ b/app/assets/stylesheets/themes/layout2/theme-b/style.css.scss
@@ -1,3 +1,6 @@
+.circularG {
+	background-color: #c63d0f;
+}
 #action-container {
 	background: url("/assets/layout2/theme-b/background_pattern.png") repeat;
 	font-family: "Raleway", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
@@ -6,9 +9,6 @@
 		.ng-invalid {
 			border: solid 1px red;
 		}
-	}
-	.circularG {
-		background-color: #ff0000;
 	}
 	.client-logo {
 		background: #333333;
