--- a/app/views/client_views/layout1/delivery_template.html.haml
+++ b/app/views/client_views/layout1/delivery_template.html.haml
@@ -1,32 +1,30 @@
 .container.text-center
-  %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"image_full", "is-admin"=>"is_admin"}
-    .drop-shadow.lifted#header-image{"ng-style" => "signature_image_styling()"}
+  %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"header_image_full", "is-admin"=>"is_admin"}
+    .drop-shadow.lifted#header-image{"ng-style" => "header_image_styling()"}
   %h2#petition-headline.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Headline", "name"=>"delivery_headline_primary", "required"=>""}
   %h1.title.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Headline (Secondary)", "name"=>"delivery_headline_secondary", "required"=>""}
   %p.description
-    %span.contenteditable.placeholer-showing{:style=>"display: block", "contenteditable"=>"", "ng-model" => "petition.summary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Petition Summary", "name"=>"summary", "required"=>""}
+    %span.contenteditable.placeholer-showing{:style=>"display: block", "contenteditable"=>"", "ng-model" => "petition.delivery_summary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Summary", "name"=>"summary", "required"=>""}
   #action-wrapper
     #sign-panel{:style => "margin: 20px 0px 40px 0px", "ng-switch"=>"disable_forms"}
       %form{"ng-switch-when"=>"false", "name"=>"tweet_form", "novalidate"=>"", "ng-class"=>"form_styling()", "role"=>"form"}
         #share-comment.drop-shadow-full.solid-white-back.text-left
           %textarea.form-control{:style=>"width: 96%", "rows"=>"5", "name"=>"tweet", "ng-model"=>"tweet.message", :maxlength => "115", "required"=>""}
-            .contenteditable.placeholder-showing.text-left{:style=>"height: 80px", "contenteditable"=>"", "ng-model"=>"petition.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message"}
           #message-counter.text-right {{115 - tweet.length}}
         %button#deliver-signature.action-button.icon{"ng-click" => "deliver_action(tweet_form)"}
           %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text"}
         .text-center
-          %a{"ng-click" => "skip_delivery()"}
+          %button.btn.btn-link{"ng-click" => "skip_delivery()"}
             Not Right Now
       %div{"ng-switch-when"=>"true"}
         #share-comment.drop-shadow-full.solid-white-back.text-left
-          %textarea.form-control{:style=>"width: 96%", "rows"=>"5", "name"=>"tweet", "ng-model"=>"tweet.message", :maxlength => "115", "required"=>""}
-            .contenteditable.placeholder-showing.text-left{:style=>"height: 80px", "contenteditable"=>"", "ng-model"=>"petition.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message"}
+          .contenteditable.placeholder-showing.text-left{:style=>"height: 120px", "contenteditable"=>"", "ng-model"=>"petition.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message"}
           #message-counter.text-right {{115 - tweet.length}}
         %button#deliver-signature.action-button.icon{"ng-click" => "deliver_action(tweet_form)"}
           %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text"}
         .text-center
-          %a{"ng-click" => "skip_delivery()"}
-            Not Right Now
+          %button.btn.btn-link{"ng-click" => "skip_delivery()"}
+            %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text"}
     #target-count-wrapper{:style => "margin: 0px auto 10px auto;"}
       .row
         #target-count-progress-wrapper.col-md-11.solid-white-back.drop-shadow-full
