--- a/app/views/client_views/layout1/signature_template.html.haml
+++ b/app/views/client_views/layout1/signature_template.html.haml
@@ -1,6 +1,6 @@
 .container.text-center{:style=>"width: auto"}
-  %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"image_full", "is-admin"=>"is_admin"}
-    .drop-shadow.lifted#header-image{"ng-style" => "signature_image_styling()"}
+  %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"header_image_full", "is-admin"=>"is_admin"}
+    .drop-shadow.lifted#header-image{"ng-style" => "header_image_styling()"}
   %h2#petition-headline.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline", "name"=>"headline_primary", "required"=>""}
   %h1.title.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.headline_secondary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Signature Headline (Secondary)", "name"=>"headline_secondary", "required"=>""}
   %p.description
