--- a/app/views/client_views/layout2/signature_template.html.haml
+++ b/app/views/client_views/layout2/signature_template.html.haml
@@ -1,7 +1,7 @@
 .container.text-center{:style=>"width: auto"}
 	.client-logo-wrapper
-		.client-logo.text-center#client-logo-top
-			%img{"ng-src" => "{{client_image_url()}}"}
+		.client-logo{:style=>"height: 100px", "image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"header_image_full", "is-admin"=>"is_admin"}
+			#header-image{"ng-style" => "header_image_styling()"}
 	#petition-container
 		#petition-headline.section-header.text-center
 			%h2.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Petition Headline", "name"=>"headline_primary", "required"=>""}
@@ -91,6 +91,6 @@
 				%button.btn.btn-primary#more-signers-button{"ng-hide"=>"comments.items.length >= comments.total", "ng-click"=>"show_more_signatures_click()"}
 					%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.signature_more_signers_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Signers Button Text", "name"=>"signature_more_signers_button_text","required"=>""}
 	.client-logo-wrapper
-		.client-logo.text-center#client-logo-bottom
-			%img{"ng-src" => "{{client_image_url()}}"}
+		.client-logo.text-center#client-logo-bottom{:style=>"height: 50px", "image-upload-overlay"=>"", "title"=>"Add Footer Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"footer_image_full", "is-admin"=>"is_admin"}
+			#footer-image{"ng-style" => "footer_image_styling()"}
 			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Disclaimer Text", "name"=>"disclaimer_text","required"=>""}
